force-app/main/default/objects/Background_Check__c/Background_Check__c.object-meta.xml
<CustomObject>
    <label>Background Check</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SEQUENCE_NUMBER</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Check</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>