force-app/main/default/objects/Background_Check__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <description>Applicant Full Name derived by combing First Name, Middle Name and Last Name</description>
    <formula>IF( Middle_Name__c != Null, First_Name__c  &amp;&apos; &apos; &amp;   Middle_Name__c  &amp;&apos; &apos;  &amp;  Last_Name__c, First_Name__c  &amp;&apos; &apos; &amp;  Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>