force-app/main/default/objects/Background_Check__c/fields/CH_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>CH_Check_Date__c</fullName>
    <label>CH Check Date</label>
    <type>Date</type>
</CustomField>