force-app/main/default/objects/Background_Check__c/fields/Consent_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Due_Date__c</fullName>
    <label>Consent Due Date</label>
    <type>Date</type>
</CustomField>