force-app/main/default/objects/Background_Check__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipLabel>Background Check</relationshipLabel>
    <relationshipName>Background_Check</relationshipName>
    <type>Lookup</type>
</CustomField>