force-app/main/default/objects/Background_Check__c/fields/CPI_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>CPI_Check_Date__c</fullName>
    <label>CPI Check Date</label>
    <type>Date</type>
</CustomField>