force-app/main/default/objects/Background_Check__c/fields/CPI_Initials__c.field-meta.xml
<CustomField>
    <fullName>CPI_Initials__c</fullName>
    <label>CPI Initials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>