force-app/main/default/objects/Background_Check__c/fields/CPI_Record_Found__c.field-meta.xml
<CustomField>
    <fullName>CPI_Record_Found__c</fullName>
    <label>CPI Record Found</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>