force-app/main/default/objects/Background_Check__c/fields/Fingerprint_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint_Check_Date__c</fullName>
    <label>Fingerprint Check Date</label>
    <type>Date</type>
</CustomField>