force-app/main/default/objects/Background_Check__c/fields/FingerPrint_Notice_Reason__c.field-meta.xml
<CustomField>
    <fullName>FingerPrint_Notice_Reason__c</fullName>
    <label>FingerPrint Notice Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fingerprint_Record_Found_New__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>