force-app/main/default/objects/Background_Check__c/fields/Fingerprint_Record_Found_New__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint_Record_Found_New__c</fullName>
    <label>Fingerprint Record Found</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>