force-app/main/default/objects/Background_Check__c/fields/Juvenile__c.field-meta.xml
<CustomField>
    <fullName>Juvenile__c</fullName>
    <label>Juvenile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>