force-app/main/default/objects/Background_Check__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <label>Mailing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_All_States</valueSetName>
    </valueSet>
</CustomField>