force-app/main/default/objects/Background_Check__c/fields/Mailing_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_ZipCode__c</fullName>
    <label>Mailing ZipCode</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>