force-app/main/default/objects/Background_Check__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <formula>Role__r.CLQ_Organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Id</label>
    <type>Text</type>
</CustomField>