force-app/main/default/objects/Background_Check__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipLabel>Background Check</relationshipLabel>
    <relationshipName>Background_Check</relationshipName>
    <type>Lookup</type>
</CustomField>