force-app/main/default/objects/Background_Check__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Background_Check</relationshipName>
    <type>Lookup</type>
</CustomField>