force-app/main/default/objects/Background_Check__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Role</label>
    <referenceTo>CLQ_Role__c</referenceTo>
    <relationshipLabel>Background Check</relationshipLabel>
    <relationshipName>Background_Check</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>