force-app/main/default/objects/Background_Check__c/fields/SOR_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>SOR_Check_Date__c</fullName>
    <label>SOR Check Date</label>
    <type>Date</type>
</CustomField>