force-app/main/default/objects/Background_Check__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <formula>Contact_Id__c  &amp;  Organization_Id__c  &amp;  (  TEXT( Consent_Received_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Id</label>
    <type>Text</type>
</CustomField>