force-app/main/default/objects/Background_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Background_Check_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>