force-app/main/default/objects/Background_Check__c/listViews/Background_Check_Queu_Background_Check.listView-meta.xml
<ListView>
    <fullName>Background_Check_Queu_Background_Check</fullName>
    <filterScope>Queue</filterScope>
    <label>Background Check Queue</label>
    <queue>Background_Check_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>